<resources>
    <string name="app_name">syshotel</string>
    <string name="Personal_Information">Informações Pessoais</string>
    <string name="register_name">Nome Completo</string>
    <string name="register_cpf">CPF</string>
    <string name="register_email">E-mail</string>
    <string name="register_phone">Telefone</string>
    <string name="text_register_address">Endereço</string>
    <string name="register_address">Rua</string>
    <string name="register_house_number">Cep</string>
    <string name="register_house_complement">Complemento</string>
    <string name="register_neighborhood">Bairro</string>
    <string name="register_house_city">Cidade</string>
    <string name="register_houser_state">Estado</string>
    <string name="text_user_account_user">Conta de Usuário</string>
    <string name="register_user_username">Nome de Usuário</string>
    <string name="register_user_password">Senha</string>
    <string name="register_user_repeat_password">Confirmar senha</string>
    <string name="accept_terms">Aceito os termos de uso</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_save">Salvar</string>
    <string name="txt_register_guest">Cadastro de Hóspede</string>
    <string name="txt_fill_in_guest_details">Preencha os dados do hóspede</string>
    <string name="rememberPassword">Lembrar senha</string>



    <string name="welcome_back">Bem-vindo de volta</string>
    <string name="login_to_continue">Faça login para continuar</string>
    <string name="username">Nome de usuário</string>
    <string name="password">Senha</string>
    <string name="remember_me">Lembrar-me</string>
    <string name="forgot_password">Esqueci a senha</string>
    <string name="login">ENTRAR</string>
    <string name="or">OU</string>
    <string name="create_account">Criar uma conta</string>
    <string name="need_help">Precisa de ajuda?</string>
    <string name="contact_support">Contate o suporte</string>
</resources>